modules/webgl/tests/glsl-conformance-shaderWithLineDirective.vs.exp
"glsl-conformance-shaderWithLineDirective.vs":124: L0001: Parse error: 
foo


